methods.args.MethodsArgs.scala.code

def move(nbPas: Int,versLAvant: Boolean) : 
if (versLAvant == true) { avance();
                        }
else {
  recule();
}
val resultat = move(7 , true)
